# dealer-boot

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  CODE_REVIEW_BUSINESS.md  CODE_REVIEW_HEALTHBRAIN_DRUG.md  README.md  docker-compose.local.yml  hk-agent  package.json  pom.xml
.ai/: BUGS.md  (+8 more)
hk-agent/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
hk-agent/agents/: __init__.py  base.py  registry.py
hk-agent/agents/fabric_cutting/: agent.py  config.py  maxrects.py  models.py  parser.py  reports.py  service.py
hk-agent/infra/: app_logger.py
hk-agent/llm/: cache.py  client.py  prompts.py
hk-agent/tests/: test_fabric_cutting.py
hk-agent/web/: app.py
hk-agent/web/config/: fabric_cutting.json
hk-agent/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
hk-agent/web/frontend/src/: App.tsx  styles.css  types.ts
hk-agent/web/frontend/src/api/: chatStream.ts  fabricCutting.ts
hk-agent/web/frontend/src/components/: ActivityPanel.tsx  Composer.tsx  MessageView.tsx  PreviewCard.tsx  ResultCard.tsx  Sidebar.tsx  WorkProcessCard.tsx
hk-agent/web/frontend/src/data/: templates.ts
hk-agent/web/frontend/src/hooks/: useSmartScroll.ts
hk-agent/web/frontend/src/storage/: reports.ts
hk-agent/web/static/: index.html  report.html
hk-agent/web/static/assets/: index-B3ALhhfp.js  index-B4DBWkDi.js  index-BA9n8BU9.css  index-BbATTXPV.js  index-Benz6gh3.css  index-BkDA5Zil.css  index-C0acEsCd.js  index-CQdzl8Bi.css  index-DJuDfP4p.css  index-Dj2uC4Kt.css  index-DyUqOK_b.js
(+3001 files in other folders)
