[project]
name = "hk-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.scripts]
hk-agent = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["agents*", "llm*", "web*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
